--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
     "bourbon": "^4.2.7",
+    "bourbon-bitters": "^1.2.1",
     "bourbon-neat": "^1.8.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
