--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~2.0.0",
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
+    "@types/chrome": "0.0.35",
     "bourbon": "^4.2.7",
     "bourbon-bitters": "^1.2.1",
     "bourbon-neat": "^1.8.0",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
+    "ng2-cookies": "^1.0.3",
+    "rxjs": "^5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
