--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~2.0.0",
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
+    "@types/chai": "^3.4.34",
     "@types/chrome": "0.0.35",
     "bourbon": "^4.2.7",
     "bourbon-bitters": "^1.2.1",
