Initial skeleton for privacy filter background script

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -28,6 +28,14 @@
     "activeTab",
     "webRequest",
     "webRequestBlocking",
+    "background",
+    "storage",
     "<all_urls>"
-  ]
+  ],
+
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  }
 }
