--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "compress": "cp src/manifest.json dist/ && cd dist && zip -r -X $npm_package_name.zip ."
+    "compress": "cp src/background.js dist/ && cp src/manifest.json dist/ && cd dist && zip -r -X $npm_package_name.zip ."
   },
   "private": true,
   "dependencies": {
