--- a/package.json
+++ b/package.json
@@ -13,33 +13,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.2.1",
-    "@angular/compiler": "~2.2.1",
-    "@angular/core": "~2.2.1",
-    "@angular/forms": "~2.2.1",
-    "@angular/http": "~2.2.1",
-    "@angular/platform-browser": "~2.2.1",
-    "@angular/platform-browser-dynamic": "~2.2.1",
-    "@angular/router": "~3.2.1",
+    "@angular/common": "2.2.3",
+    "@angular/compiler": "2.2.3",
+    "@angular/core": "2.2.3",
+    "@angular/forms": "2.2.3",
+    "@angular/http": "2.2.3",
+    "@angular/platform-browser": "2.2.3",
+    "@angular/platform-browser-dynamic": "2.2.3",
+    "@angular/platform-server": "2.2.3",
+    "@angular/router": "3.2.3",
     "@types/chai": "^3.4.34",
     "@types/chrome": "0.0.35",
     "@types/webrtc": "0.0.21",
-    "angular-2-local-storage": "0.0.22",
+    "angular-2-local-storage": "1.0.0",
     "bourbon": "^4.2.7",
     "bourbon-bitters": "^1.2.1",
     "bourbon-neat": "^1.8.0",
     "core-js": "^2.4.1",
     "ng2-cookies": "^1.0.3",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.30",
+    "@angular/compiler-cli": "2.2.3",
+    "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.20-4",
-    "codelyzer": "~0.0.26",
-    "jasmine-core": "2.4.1",
+    "angular-cli": "1.0.0-beta.22-1",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -49,7 +51,7 @@
     "node-sass": "^3.10.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "2.0.2"
+    "tslint": "^4.0.2",
+    "typescript": "2.0.3"
   }
 }
