--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/platform-server": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/common": "2.2.3",
+    "@angular/compiler": "2.2.3",
+    "@angular/core": "2.2.3",
+    "@angular/forms": "2.2.3",
+    "@angular/http": "2.2.3",
+    "@angular/platform-browser": "2.2.3",
+    "@angular/platform-browser-dynamic": "2.2.3",
+    "@angular/platform-server": "2.2.3",
+    "@angular/router": "3.2.3",
     "@types/chai": "^3.4.34",
     "@types/chrome": "0.0.35",
     "@types/webrtc": "0.0.21",
@@ -31,15 +31,15 @@
     "bourbon-neat": "^1.8.0",
     "core-js": "^2.4.1",
     "ng2-cookies": "^1.0.3",
-    "rxjs": "^5.0.1",
+    "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/compiler-cli": "2.2.3",
     "@types/jasmine": "^2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "^1.0.0-beta.24",
+    "angular-cli": "1.0.0-beta.22-1",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
