--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/platform-server": "2.2.3",
     "@angular/router": "3.2.3",
-    "@ngtools/webpack": "^1.1.9",
+    "@ngtools/webpack": "1.1.9",
     "@types/chai": "^3.4.34",
     "@types/chrome": "0.0.35",
     "@types/webrtc": "0.0.21",
