--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "compress": "cd dist && zip -r -X $npm_package_name.zip ."
+    "compress": "cd dist && zip -r -X $npm_package_name.zip .",
+    "compress-ff": "cd dist-firefox && jpm xpi"
   },
   "private": true,
   "dependencies": {
@@ -44,6 +45,7 @@
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
+    "jpm": "^1.2.2",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
