--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bourbon-bitters": "^1.2.1",
     "bourbon-neat": "^1.8.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ng2-cookies": "^1.0.3",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
