--- a/src/firefox.manifest.json
+++ b/src/firefox.manifest.json
@@ -36,6 +36,7 @@
     "scripts": [
       "ad-list.js",
       "malware-list.js",
+      "force-https.js",
       "firefox.background.js"
     ]
   }
