--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ng2-cookies": "^1.0.3",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
+    "xml2js": "^0.4.17",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "angular-cli": "1.0.0-beta.22-1",
     "codelyzer": "~2.0.0-beta.1",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "fs-walk": "0.0.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "jpm": "^1.2.2",
