--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.3",
-    "@angular/compiler": "2.2.3",
-    "@angular/core": "2.2.3",
-    "@angular/forms": "2.2.3",
-    "@angular/http": "2.2.3",
-    "@angular/platform-browser": "2.2.3",
-    "@angular/platform-browser-dynamic": "2.2.3",
-    "@angular/platform-server": "2.2.3",
-    "@angular/router": "3.2.3",
-    "@ngtools/webpack": "1.1.9",
-    "@types/chai": "^3.4.34",
-    "@types/chrome": "0.0.35",
-    "@types/webrtc": "0.0.21",
+    "@angular/animations": "^4.2.5",
+    "@angular/cli": "^1.2.0",
+    "@angular/common": "^4.2.5",
+    "@angular/compiler": "^4.2.5",
+    "@angular/compiler-cli": "^4.2.5",
+    "@angular/core": "^4.2.5",
+    "@angular/forms": "^4.2.5",
+    "@angular/http": "^4.2.5",
+    "@angular/platform-browser": "^4.2.5",
+    "@angular/platform-browser-dynamic": "^4.2.5",
+    "@angular/platform-server": "^4.2.5",
+    "@angular/router": "^4.2.5",
+    "@ngtools/webpack": "^1.5.0",
+    "@types/chrome": "0.0.47",
     "angular-2-local-storage": "1.0.0",
     "bourbon": "^4.2.7",
     "bourbon-bitters": "^1.2.1",
@@ -34,31 +35,22 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-cookies": "^1.0.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.4.2",
     "ts-helpers": "^1.1.1",
+    "typescript": "^2.4.1",
+    "webpack": "^3.1.0",
     "xml2js": "^0.4.17",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.3",
-    "@types/jasmine": "^2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.22-1",
-    "codelyzer": "~2.0.0-beta.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "@types/node": "^8.0.9",
+    "angular-2-local-storage": "^1.0.0",
+    "codelyzer": "^3.1.2",
+    "extract-text-webpack-plugin": "^2.1.2",
     "fs-walk": "0.0.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
     "jpm": "^1.2.2",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "node-sass": "^3.10.1",
-    "protractor": "4.0.9",
-    "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
-    "typescript": "2.0.3"
+    "node-sass": "^4.5.3",
+    "ts-node": "^3.2.0",
+    "tslint": "^5.5.0"
   }
 }
